Refactor project workspace to use components and make it lighter.